--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "mqttapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "MQTT app",
   "main": "main.js",
-  "type": "module",
+  "typeXX": "module",
   "scripts": {
     "start": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
-  "author": "",
+  "author": "YamamotoTaijiro",
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -26,7 +26,7 @@
   "dependencies": {
     "electron-args": "^0.1.0",
     "electron-squirrel-startup": "^1.0.1",
-    "electron-store": "^10.0.0",
+    "electron-store": "^8.2.0",
     "mqtt": "^5.8.0"
   }
 }
